force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Certification__c/agf__ADM_Certification__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>