force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Certification__c/fields/agf__Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>