force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Certification__c/fields/agf__Certified__c.field-meta.xml
<CustomField>
    <fullName>agf__Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>