force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Certification__c/fields/agf__Certified_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Certified_On__c</fullName>
    <label>Certified On</label>
    <type>Date</type>
</CustomField>