force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Certification__c/fields/agf__Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>