force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Certification__c/validationRules/agf__User_Required_on_Certification_record.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__User_Required_on_Certification_record</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(agf__User__c)</errorConditionFormula>
    <errorDisplayField>agf__User__c</errorDisplayField>
    <errorMessage>User is required to save Certification data</errorMessage>
</ValidationRule>